--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-countup": "^6.1.1",
