--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "chart.js": "^2.9.4",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
+    "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
