--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid-tracker-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cyeongb.github.io/COVID19_Tracker",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
